--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -1,3 +1,13 @@
+@font-face {
+    font-family: san-Light;
+    src: url(../fonts/OpenSans-Light.ttf);
+}
+
+@font-face {
+    font-family: san-Regular;
+    src: url(../fonts/OpenSans-Regular.ttf);
+}
+
 /*Login Screen Style*/
  
 /*
@@ -76,15 +86,84 @@
 body{
     background-image: url("../../custom/images/bg_image.jpg");
     background-size: 100%;
+     min-height: 500px;
+  padding-top: 70px;
+     padding-bottom: 70px;
+    font-family: san-Regular;
 }
-.navbar-default .navbar-nav>li>a{
+.categories{
+   min-height: 642px;
+    background-color: rgb(239, 231, 215);
+       padding-right: 0px !important; 
+   padding-left: 0px !important; 
+}
+.items{
+    background-color: #fff;
+    padding: 12px;
+    max-height: 600px;
+      overflow: auto;
+}
+.nav-links{
     color: #A0001C !important;
+}
+.itemList{
+   min-height: 100px;
+    padding-left: 0px !important;
+}
+.img{
+    width:100px;
+    height:100px;
+      border: 2px solid #000000;
+  border-bottom-left-radius: 20px;
 }
 .logo{
     height:45px;
     margin-top: -17px;
 }
+.nav-tabs>li>a{
+    color:#fff !important;
+}
+
+.breakFast{
+     background-color: rgb(233, 105, 44);
+    border-top-right-radius: 10px;
+}
+.lunch{
+     background-color: rgb(254, 17, 59);
+    border-top-right-radius: 10px;
+}
+.dinner{
+     background-color: rgb(195, 0, 35);
+    border-top-right-radius: 10px;
+}
+.lateNight{
+     background-color: rgb(70, 0, 14);
+    border-top-right-radius: 10px;
+}
 .navbar-default {
   background-color: #FFFFFF !important;
 }
+.list-group-item {
+   background-color: transparent !important; 
+   border: none !important; 
+}
+.heading{
+    background-color: #FFFFFF !important;
+    font-size: 18px;
+}
+.links-active{
+    border: 1px solid;
+  margin: 0px;
+  height: 8px;
+  margin-top: 7px !important;
+  padding-bottom: 25px !important;
+  padding-top: 6px !important;
+  background-color: #a0001c !important;
+  color: #ffffff !important;
+  border-top-right-radius: 10px;
+}
+.item-type:hover{
+    background-color: rgb(255, 249, 237) !important;
+}
+
 /*End Index Screen Style*/
