--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -165,5 +165,103 @@ body{
 .item-type:hover{
     background-color: rgb(255, 249, 237) !important;
 }
+.cart{
+  margin-top: 40px;
+  max-height: 400px;
+ background-color: rgb(70, 0, 14);
+}
+.cartItems{
+    padding: 5px;
+    min-height: 300px; 
+     background: -webkit-linear-gradient(#EFE7D7, #fff,#EFE7D7); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#EFE7D7, #fff,#EFE7D7); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#EFE7D7, #fff,#EFE7D7); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#EFE7D7, #fff,#EFE7D7); /* Standard syntax (must be last) */
+      margin-bottom: 16px;
+      font-family: san-Light;
+}
+.scroll::-webkit-scrollbar {
+    width: 5px;
+    background-color: rgb(255, 249, 237);
+    padding-right: 10px;
+}
+ 
+.scroll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+ 
+.scroll::-webkit-scrollbar-thumb {
+  background-color:  rgb(204,190,173);
+  outline: 1px solid slategrey;
+width: 40px;
+}
+.cartHeading{
+      margin-top: 10px;
+  margin-left: 5px;
+  font-family: san-Regular;
+  font-size: 12px;
+  color: #fff;
+}.cartList{
+      margin-top: 13px;
+    margin-left: 10px;
+ 
+}
+.hrLine{
+      border-top: 1px solid #a0001c !important;
+}
+.customize{
+    background-color: #46000E !important;
+  text-align: center;
+  width: 138px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -20px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  color: #fff;
+margin-bottom: 40px;
+    
+}
+.totalAmount{
+    font-size: 20px;
+    font-weight: bolder;
+      margin-bottom: -15px;
+}
+#checkout{
+ background-color: #46000E !important;
+ color: #fff;
+  margin-top: -12px;
+  padding: 5px;
+}
+#checkout:before {
+    content: '';
+    position: absolute;
+    top: 0; right: 0;
+    border-top: 15px solid #F2EBDE;
+    border-left: 15px solid #46000E;
+    border-bottom: 15px solid #F2EBDE;
+    width: 0;
+}
+.decrement{
+    color:  rgb(233, 105, 44);
+     font-weight: bolder;
 
+}
+.increment{
+    color:  rgb(233, 105, 44);
+     font-weight: bolder;
+
+    
+}
+
+.itemCount{
+    margin-left: 10px;
+}
+.estimatedTime{
+  background-color: rgb(239,231,215) !important;
+  margin-bottom: 10px;
+  margin-top: 10px;
+      padding-left: 5px;
+font-family: san-Light;
+}
 /*End Index Screen Style*/
