--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -311,9 +311,15 @@ margin-bottom: 40px;
   cursor: pointer;
 }
 .quantity{
-      width: 20px;
+  width: 20px;
   height: 22px;
-  padding-left: 4px;
+  padding-left: 2px;
+  padding-right: 2px;
+}
+.quantityBox{
+	width: 25px;
+	height: 22px;
+	text-align: center;
 }
 .itemCount{
     margin-left: 10px;
@@ -343,5 +349,7 @@ float: right;
       padding-right: 5px;
 font-family: san-Light;
 }
+.glyphicon-plus,.glyphicon-chevron-right,.glyphicon-minus,.glyphicon-chevron-left,.glyphicon-trash{
+	cursor: pointer;
+}
 /*End Index Screen Style*/
-/**/
