--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -183,7 +183,7 @@ body{
 }
 .list-group-item {
    background-color: transparent !important; 
-   border: none !important; 
+   border-bottom: 2px solid #D1CBC0;
 }
 .list-group-item.activeCat{
    background-color: #FFF !important; 
