--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -478,4 +478,7 @@ position: absolute;
   top: 5px;
   margin-left: 5px;
   }
+  .cartHeading .glyphicon-shopping-cart{
+  font-size:20px;
+  }
 /*End Product line item*/
