Fixed customize icons issue

--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -341,6 +341,11 @@ margin-bottom: 40px;
       padding-left: 5px;
 font-family: san-Light;
 }
+.customizeIcon{
+    float:right;
+    margin-top: -32px;
+  margin-right: 32px;
+}
 .left{
 float: left;
 width: 55%;
