--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -22,6 +22,22 @@
     }
 }
 
+
+@media (max-width: 768px) {
+    .customizeIcon {
+   margin-right: -1% !important;
+}
+    .customizeIcon span{
+  margin-right: 2%;
+}
+}
+@media (min-width: 992px){
+    .customizeIcon {
+   margin-right: 0% !important;
+}
+    
+}
+
 .omb_login .omb_authTitle {
     text-align: center;
 }
