--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -352,13 +352,15 @@ float: right;
     color: red !important;
 }
 .media-heading{
-    background-color: rgb(239,231,215) !important;
+   
     margin-bottom: 15px;
   margin-top: 15px;
       padding-left: 5px;
       padding-right: 5px;
-font-family: san-Light;
+font-family: verdana;
     margin-right: 30%;
+	font-weight: bold;
+  font-size: 14px;
 }
 .glyphicon-plus,.glyphicon-chevron-right,.glyphicon-minus,.glyphicon-chevron-left,.glyphicon-trash,.glyphicon-edit{
 	cursor: pointer;
@@ -481,4 +483,30 @@ position: absolute;
   .cartHeading .glyphicon-shopping-cart{
   font-size:20px;
   }
-/*End Product line item*/
+.messagesBar{
+align: center;
+text-align: center;
+color: white;
+font-size: 14px;
+font-weight: bold;
+}
+li.food_item{background-color:#e2e2e2; padding:0 0.5em; margin-top:0.5em;padding-top:20px;display:block;}
+@media (max-width: 768px) {
+    .customizeIcon {
+   margin-right: -1% !important;
+}
+    .customizeIcon span{
+  margin-right: 2%;
+}
+}
+@media (min-width: 992px){
+    .customizeIcon {
+   margin-right: 0% !important;
+}
+    
+}
+.customizeIcon{
+    float:right;
+    margin-top: -32px;
+  margin-right: 32px;
+}
