Added More and Less Details for Item summery

--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -488,6 +488,9 @@ position: absolute;
       margin-top: -5%;
   margin-right: 25px;
 }
+.show-read-more .more-text{
+        display: none;
+    }
 .messagesBar{
 align: center;
 text-align: center;
@@ -498,7 +501,7 @@ font-weight: bold;
 li.food_item{background-color:#e2e2e2; padding-bottom: 0.5em !important; padding:0 0.5em; margin-top:0.5em;padding-top:20px;display:block;}
 @media (max-width: 768px) {
     .customizeIcon {
-        margin-right: -1% !important;
+        margin-right: 3% !important;
         margin-top: -27px;
 }
     .customizeIcon span{
