Checkout page static commit

--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -522,7 +522,7 @@ li.food_item{background-color:#e2e2e2; padding-bottom: 1em !important;
     border-bottom-right-radius: 35px !important;
     
 }
-.text-center{
+h2.text-center{
     color: #fff !important;
 }
 .active a{
@@ -548,6 +548,16 @@ a:hover{
     .customizeIcon {
    margin-right: 0% !important;
           margin-top: -8%;
+}
+    
+}
+@media (max-width: 420px){
+   .show-read-more{
+       padding-top: 5%;
+       clear:both !important;
+   }
+    .customizeIcon {
+    margin-top: 10px;
 }
     
 }
@@ -591,3 +601,41 @@ width: 23% !important;
 .round-button:hover {
     background: #262626;
 }
+
+/*Start cart checkout*/
+.table>tbody>tr>td, .table>tfoot>tr>td{
+    vertical-align: middle;
+}
+@media screen and (max-width: 600px) {
+    table#cart tbody td .form-control{
+		width:20%;
+		display: inline !important;
+	}
+	.actions .btn{
+		width:36%;
+		margin:1.5em 0;
+	}
+	
+	.actions .btn-info{
+		float:left;
+	}
+	.actions .btn-danger{
+		float:right;
+	}
+	
+	table#cart thead { display: none; }
+	table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
+	table#cart tbody tr td:first-child { background: #333; color: #fff; }
+	table#cart tbody td:before {
+		content: attr(data-th); font-weight: bold;
+		display: inline-block; width: 8rem;
+	}
+	
+	
+	
+	table#cart tfoot td{display:block; }
+	table#cart tfoot td .btn{display:block;}
+	
+}
+
+/*End cart checkout*/
