--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -1,3 +1,25 @@
+body:before {
+  content: 'Desktop';
+  z-index: 1;
+}
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  body:before {
+    content: 'Tablet';
+    z-index: 2;
+  }
+}
+@media screen and (min-width: 420px) and (max-width: 767px) {
+  body:before {
+    content: 'Mobile';
+    z-index: 3;
+  }
+}
+@media screen and (min-width: 0) and (max-width: 419px) {
+  body:before {
+    content: 'SmallMobile';
+    z-index: 4;
+  }
+}
 @font-face {
     font-family: san-Light;
     src: url(../fonts/OpenSans-Light.ttf);
@@ -168,8 +190,8 @@ body{
     border-top-right-radius: 10px;
 }
 .lunch{
-     background-color: rgb(254, 17, 59);
-    border-top-right-radius: 10px;
+   background-color: rgb(254, 17, 59);
+    border-top-right-radius: 10px;	 
 }
 .dinner{
      background-color: rgb(195, 0, 35);
@@ -178,6 +200,7 @@ body{
 .lateNight{
      background-color: rgb(70, 0, 14);
     border-top-right-radius: 10px;
+}
 }
 .glyphicon-th-list{
      color: rgb(70, 0, 14);
@@ -249,9 +272,6 @@ body{
   outline: 1px solid slategrey;
 width: 40px;
 }
-li{
-      list-style: none !important;
-}
 .cartHeading{
       margin-top: 10px;
   margin-left: 5px;
@@ -322,6 +342,7 @@ margin-bottom: 40px;
   height: 22px;
   padding-left: 2px;
   padding-right: 2px;
+  font-size: 16px;	
 }
 .quantityBox{
 	width: 25px;
@@ -363,7 +384,7 @@ float: right;
 font-family: verdana;
     margin-right: 30%;
 	font-weight: bold;
-  font-size: 14px;
+  font-size: 18px;
 }
 .glyphicon-plus,.glyphicon-chevron-right,.glyphicon-minus,.glyphicon-chevron-left,.glyphicon-trash,.glyphicon-edit,.glyphicon-shopping-cart{
 	padding-left: 3px;
@@ -376,8 +397,6 @@ font-family: verdana;
   border-top-right-radius: 20px;
 }
 /*End Index Screen Style*/
-
-/*Start Search*/
 .search .form-control-feedback{
     margin-right: 4%;
 }
@@ -386,7 +405,6 @@ font-family: verdana;
   margin-bottom: 7px !important;
       margin-left: 20%;
 }
-/*End Search*/
 @media screen and (max-width: 640px) {
     .media-right {
   margin-top: -6%;
@@ -401,7 +419,7 @@ font-family: verdana;
   margin-top: -9%;
 
 }
-    .search.form-group {
+.search.form-group {
     margin-left: 0%;
 }
 .itemList ul{
@@ -433,9 +451,15 @@ ul.product-line-items li{
  margin-right: 2%;
 }
 ul.product-line-items li input[type="radio"] {
-  margin-right: 4px;
-}
 
+  background-color: rgb(237, 178, 67);
+    color: white;
+}
+.lateNight span.input-group{
+      float: right;
+  margin-top: -7%;
+  margin-right: -43%;
+}
 .modal-header .close {
   margin-top: 3px !important;
   margin-right: 12px !important;
@@ -476,11 +500,6 @@ border-color: #fff !important;
     border-bottom-right-radius: 0px;
     background-color: rgb(237, 178, 67);
     color: white;
-}
-.lateNight span.input-group{
-      float: right;
-  margin-top: -7%;
-  margin-right: -43%;
 }
 #customizeFoodBut{
   background-color: #46000E !important;
@@ -535,42 +554,7 @@ color: white;
 font-size: 14px;
 font-weight: bold;
 }
-li.food_item{background-color:#e2e2e2; padding-bottom: 1em !important;
-    
-    border-bottom-left-radius: 35px;
-    border-top-right-radius:35px;
-    padding:0 0.5em; 
-    margin-top:0.5em;
-    padding-top:15px;
-    padding-bottom:15px;
-    display:block;
-}
-.stummyBrandingTop{
-    border-top-right-radius:35px !important;
-    border-top-left-radius:35px !important;
-}
-.stummyBranding{
-    border-bottom-right-radius:35px !important;
-    border-top-left-radius:35px !important;
-}
-.stummyBrandingBottom{
-    border-bottom-left-radius: 35px !important;
-    border-bottom-right-radius: 35px !important;
-    
-}
-h2.text-center{
-    color: #fff !important;
-}
-.active a{
-    border-top-left-radius: 35px !important;
-    border-bottom-right-radius:35px !important;
-}
-a:hover{
-    border-top-left-radius: 35px !important;
-    border-bottom-right-radius:35px !important;
-    
-}
-
+li.food_item{background-color:#e2e2e2; padding-bottom: 0.5em !important; padding:0 0.5em; margin-top:0.5em;padding-top:15px;padding-bottom:15px;display:block;}
 @media (max-width: 768px) {
     .customizeIcon {
         margin-right: 3% !important;
@@ -583,17 +567,7 @@ a:hover{
 @media (min-width: 992px){
     .customizeIcon {
    margin-right: 0% !important;
-          margin-top: -8%;
-}
-    
-}
-@media (max-width: 420px){
-   .show-read-more{
-       padding-top: 5%;
-       clear:both !important;
-   }
-    .customizeIcon {
-    margin-top: 10px;
+          margin-top: -11%;
 }
     
 }
@@ -618,60 +592,51 @@ width: 23% !important;
 }
 }
 .round-button {
-    display:block;
-    width:50px;
-    height:50px;
-    line-height:50px;
-    border: 2px solid #f5f5f5;
-    border-radius: 50%;
-    color:#f5f5f5;
-    text-align:center;
-    text-decoration:none;
-    background: #464646;
-    box-shadow: 0 0 3px gray;
-    font-size:14px;
-    font-weight:bold;
-	margin-left: 15px;
-	margin-bottom: 5px;
+	display: block;
+	width: 45px;
+	height: 45px;
+	line-height: 45px;
+	border: 2px solid #F5F5F5;
+	border-radius: 50%;
+	color: #F5F5F5;
+	text-align: center;
+	text-decoration: none;
+	background: none repeat scroll 0% 0% #464646;
+	box-shadow: 0px 0px 3px #808080;
+	font-size: 12px;
+	font-weight: bold;
+	margin-left: 27px;
+	margin-bottom: 15px;
 }
 .round-button:hover {
     background: #262626;
 }
 
-/*Start cart checkout*/
-.table>tbody>tr>td, .table>tfoot>tr>td{
-    vertical-align: middle;
+@media (max-width: 420px){
+  /*.show-read-more{
+      clear:both !important;
+	  padding-top: 4%;
+	
+  }*/
+  .img{
+  display: none !important;
+  }
+   .customizeIcon {
+   margin-top: -50px;
 }
-@media screen and (max-width: 600px) {
-    table#cart tbody td .form-control{
-		width:20%;
-		display: inline !important;
-	}
-	.actions .btn{
-		width:36%;
-		margin:1.5em 0;
-	}
-	
-	.actions .btn-info{
-		float:left;
-	}
-	.actions .btn-danger{
-		float:right;
-	}
-	
-	table#cart thead { display: none; }
-	table#cart tbody td { display: block; padding: .6rem; min-width:320px;}
-	table#cart tbody tr td:first-child { background: #333; color: #fff; }
-	table#cart tbody td:before {
-		content: attr(data-th); font-weight: bold;
-		display: inline-block; width: 8rem;
-	}
-	
-	
-	
-	table#cart tfoot td{display:block; }
-	table#cart tfoot td .btn{display:block;}
-	
+   
 }
 
-/*End cart checkout*/
+.cartMinus1,.cartPlus1,.glyphicon-edit,.glyphicon-shopping-cart,.quantityItemt{
+	font-size: 20px;
+}
+@font-face{font-family: 'WebRupee';src: url('../../vendor/fonts/inr/WebRupee.V2.0.eot');src: local('WebRupee'), url('../../vendor/fonts/inr/WebRupee.V2.0.ttf') format('truetype'),  url('../../vendor/fonts/inr/WebRupee.V2.0.woff') format('woff'), url('../../vendor/fonts/inr/WebRupee.V2.0.svg') format('svg');font-weight: normal;font-style: normal;}
+.WebRupee{font-family: 'WebRupee';}
+.mobileHide{
+	display: none;
+	}
+	.hlink{
+		color: blue;
+		/*text-decoration: underline;*/
+		cursor: pointer;
+	}
