--- a/custom/css/style.css
+++ b/custom/css/style.css
@@ -21,6 +21,7 @@ body:before {
     width: 80% !important;
     margin-top: -45px !important;
 }
+
 }
 @media screen and (min-width: 0) and (max-width: 419px) {
   body:before {
@@ -652,3 +653,22 @@ width: 23% !important;
 		/*text-decoration: underline;*/
 		cursor: pointer;
 	}
+.cartCustomizeHiden{
+    display: none;
+}
+
+.rowCheckBox {
+    border: 0px solid red;
+    overflow: hidden;
+    padding: 5px;
+}
+
+.colCheckBox {
+    border: 0px solid blue;
+    float: left;
+    padding: 5px;
+    margin-right: 5px;
+}
+.colCheckBox label{
+    padding-left: 5px;
+}
